fix: avoid text overflow

--- a/app/assets/styles/_shiki.scss
+++ b/app/assets/styles/_shiki.scss
@@ -39,6 +39,26 @@ html.dark {
     }
   }
 
+  /* Focus */
+
+  .shiki {
+    &.has-focused {
+      .line:not(.focused) {
+        opacity: 0.7;
+        transition:
+          filter 0.35s,
+          opacity 0.35s;
+        filter: blur(0.095rem);
+      }
+    }
+    &:hover.has-focused {
+      .line:not(.focused) {
+        filter: blur(0);
+        opacity: 1;
+      }
+    }
+  }
+
   // Styles for `Shiki` component (Fit unwrap mode)
   code.shiki,
   .shiki code {
@@ -50,6 +70,14 @@ html.dark {
     /* Highlighted & Diff */
 
     .line {
+      // Avoid text overflow
+      & > span {
+        display: inline-block;
+        max-width: 100%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+
       &.highlighted,
       &.diff {
         display: inline-block;
@@ -72,25 +100,6 @@ html.dark {
           background-color: var(--code-line-diff-remove-color);
           opacity: 0.7;
         }
-      }
-    }
-
-    /* Foucs */
-
-    &.has-focused {
-      .line:not(.focused) {
-        opacity: 0.7;
-        transition:
-          filter 0.35s,
-          opacity 0.35s;
-        filter: blur(0.095rem);
-      }
-    }
-
-    &:hover.has-focused {
-      .line:not(.focused) {
-        filter: blur(0);
-        opacity: 1;
       }
     }
   }
